# CodeRun

./: .gitignore  README.md
quickstart/: Cargo.toml
quickstart/01_triangle/: Cargo.toml
quickstart/01_triangle/src/: main.rs
quickstart/02_ascending_list/: Cargo.toml
quickstart/02_ascending_list/src/: main.rs
quickstart/03_open_calc/: Cargo.toml
quickstart/03_open_calc/src/: main.rs
quickstart/04_word_count/: Cargo.toml
quickstart/04_word_count/src/: main.rs
quickstart/05_nearest_number/: Cargo.toml
quickstart/05_nearest_number/src/: main.rs
quickstart/06_symmetric/: Cargo.toml  README.md
quickstart/06_symmetric/src/: main.rs
quickstart/07_max_mult/: Cargo.toml  README.md
quickstart/07_max_mult/src/: main.rs
quickstart/08_miner/: Cargo.toml
quickstart/08_miner/src/: main.rs
